feat: add init and route and swagger
