# internal/server/handler/mother_service.go
@@ -245,19 +245,16 @@ func (handler *MotherService) GetPaginated() fiber.Handler {
 	}
 }
 
-// Create godoc
+// DeprovisionAllPods godoc
 //
-//	@Summary		Create a mother service
-//	@Description	Create a new mother service
+//	@Summary		Deprovision all pods
+//	@Description	Deprovision all pods in k8s
 //	@Tags			mother-services
 //	@Accept			json
 //	@Produce		json
-//	@Param			request	body		request.MotherService	true	"Request body"
-//	@Success		200		{object}	response.SuccessResponse
-//	@Failure		400		{object}	response.ErrorResponse
-//	@Failure		422		{object}	response.ErrorResponse
-//	@Failure		500		{object}	response.ErrorResponse
-//	@Router			/api/v1/mother-services [post]
+//	@Success		200	{object}	response.SuccessResponse
+//	@Failure		500	{object}	response.ErrorResponse
+//	@Router			/api/v1/deprovision-all [post]
 func (handler *MotherService) DeprovisionAllPods() fiber.Handler {
 	return func(ctx *fiber.Ctx) error {
 		tracer := otel.Tracer("mother-service-handler")
