# internal/server/http.go
@@ -174,6 +174,7 @@ func Serve(ctx context.Context, cfg *config.Config) error {
 	apiV1.Post("/mother-services", motherHandler.Create())
 	apiV1.Get("/mother-services/:id", motherHandler.GetByID())
 	apiV1.Post("/mother-services/search", motherHandler.GetPaginated())
+	apiV1.Post("/deprovision-all", motherHandler.DeprovisionAllPods())
 
 	// test category
 	apiV1.Get("/test-categories", testCategoryHandler.GetAll())
